Fix minor issue where playlist table was sliding out of viewport when padding was applied

--- a/wsmr/style.css
+++ b/wsmr/style.css
@@ -6,9 +6,12 @@ body {
     margin: 0;
     width: 100%;
 }
+#playlist-container {
+    width: 100%;
+}
 .playlist__app-container {
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
+    padding: 10px 15px;
 }
 .playlist__dev-status {
     display: flex;
@@ -41,7 +44,7 @@ table {
     border-collapse: collapse;
     border-top: 1px solid darkgray;
     border-bottom: 1px solid darkgray;
-    margin: 15px 5%;
+    width: 100%;
 }
 th,
 td {
